clusters/homelab/services/sandbox-docker/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sandbox-docker
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
  labels:
    goldilocks.fairwinds.com/enabled: "true"
